hphp/hack/test/typecheck/list_pair_assign.php.exp
File "list_pair_assign.php", line 4, characters 8-18:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
